[package]
name = "mdbook-embed"
version = "0.2.0"
edition = "2021"
authors = ["kumavale"]
description = "A preprocessor that simplifies embedded URL"
license = "MIT"
repository = "https://github.com/kumavale/mdbook-embed"
readme = "README.md"
keywords = ["mdbook", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.*"
mdbook = "0.4.*"
serde_json = "1.*"
regex = "1"
